# correomqtt-rust

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  architecture.md
crates/correo-app/: Cargo.toml
crates/correo-app/src/: app.rs  bundled.json  main.rs  plugins.rs  startup.rs
crates/correo-core/: Cargo.toml
crates/correo-core/src/: bootstrap.rs  bootstrap_plugins.rs  bootstrap_scripts.rs  commands.rs  history.rs  lib.rs  migration.rs  model.rs  runtime.rs  samples.rs  scripting.rs  scripting_mqtt.rs  scripting_tests.rs  settings_persistence.rs  surfaces.rs  types.rs
crates/correo-core/src/model/: connection_list_tests.rs  connection_settings_tests.rs  connections.rs  history.rs  migration_recovery.rs  migration_secret_tests.rs  mqtt.rs  plugin_tests.rs  plugin_workflows.rs  plugins.rs  scripting.rs  scripting_cleanup.rs  scripting_commands.rs  scripting_tests.rs  settings.rs  subscriptions.rs  tests.rs  transfer.rs
crates/correo-core/src/model/plugins/: helpers.rs  manager.rs
crates/correo-core/src/mqtt/: adapter.rs  mod.rs  service.rs  test_support.rs  tests.rs  types.rs
crates/correo-core/src/runtime/: plugin_helpers.rs  plugin_tests.rs  plugins.rs  scripting.rs
crates/correo-core/src/samples/: plugins.rs  scripts.rs
crates/correo-core/src/surfaces/: migration_recovery.rs  plugins.rs  settings.rs  transfer.rs
crates/correo-core/src/surfaces/plugins/: repository.rs
crates/correo-core/src/types/: connection_settings.rs  plugin_workflow.rs  workflow.rs
crates/correo-diagnostics/: Cargo.toml
crates/correo-diagnostics/src/: lib.rs
crates/correo-mqtt/: Cargo.toml
crates/correo-mqtt/docs/: local-broker-integration.md
crates/correo-mqtt/src/: domain.rs  error.rs  id.rs  lib.rs  redaction.rs  secret.rs  session.rs
crates/correo-mqtt/src/rumqtt/: common.rs  mod.rs  v3.rs  v5.rs
crates/correo-mqtt/src/transport/: mod.rs  ssh.rs  tls.rs
crates/correo-mqtt/tests/: contract.rs  local_broker.rs  rumqtt_fake_broker.rs
crates/correo-plugin-base64/: Cargo.toml  plugin.toml
crates/correo-plugin-base64/src/: lib.rs
crates/correo-plugin-zip-manipulator/: Cargo.toml  plugin.toml
crates/correo-plugin-zip-manipulator/src/: lib.rs
crates/correo-plugins/: Cargo.toml
crates/correo-plugins/src/: abi.rs  bundled.rs  capabilities.rs  diagnostics.rs  dispatch.rs  error.rs  fixture.rs  lib.rs  manifest.rs  package.rs  registry.rs  repository.rs  runtime.rs
crates/correo-plugins/src/bundled/: advanced_validator.rs  formatting.rs  gzip.rs
crates/correo-plugins/tests/: advanced_validator.rs  base64_package.rs  bundled_plugins.rs  contains_string_validator_plugin.rs  json_format_plugin.rs  manifest_abi_fixture.rs  plugin_repository.rs  repository_fixture.rs  runtime_registry.rs  save_manipulator_plugin.rs  systopic_plugin.rs  xml_format_plugin.rs  zip_manipulator_package.rs
crates/correo-plugins/tests/fixtures/: plugin.toml  repository.json
crates/correo-plugins/tests/fixtures/noop/: detail_byte_transform.json  detail_formatter.json  incoming_message_transform.json  message_validator.json  outgoing_message_transform.json
crates/correo-scripting/: Cargo.toml
crates/correo-scripting/src/: bindings.rs  cancellation.rs  client_args.rs  client_bindings.rs  client_callbacks.rs  client_results.rs  error.rs  executor.rs  host.rs  lib.rs  metadata.rs
crates/correo-scripting/tests/: runtime.rs  runtime_callbacks.rs
crates/correo-storage/: Cargo.toml
crates/correo-storage/src/: error.rs  lib.rs  migration.rs
crates/correo-storage/src/current/: config.rs  history.rs  hooks.rs  import_export.rs  message.rs  mod.rs  passwords.rs  scripting.rs  scripting_helpers.rs  scripting_log.rs
crates/correo-storage/src/current/import_export/: crypto.rs  dto.rs  message.rs  wire.rs
crates/correo-storage/src/legacy/: mod.rs  passwords.rs  scripting.rs
crates/correo-storage/src/migration/: config.rs  history.rs  safety.rs  scripting.rs
crates/correo-storage/src/migration/safety/: diagnostics.rs
crates/correo-storage/tests/: config_store.rs  connection_cqc.rs  history_store.rs  message_history_compat.rs  migration_backup_safety.rs  migration_fixtures.rs
crates/correo-storage/tests/fixtures/legacy_profile/: config.json  hooks.json  passwords.json  (+4 more)
crates/correo-style/: Cargo.toml
crates/correo-style/src/: egui_theme.rs  layout.rs  lib.rs  theme.rs  widgets.rs
crates/correo-ui/: Cargo.toml  build.rs
crates/correo-ui/i18n/: de-DE.ftl  en-US.ftl
crates/correo-ui/src/: about.rs  command_bar.rs  connection_launcher.rs  connection_settings.rs  connection_settings_actions.rs  connection_settings_controls.rs  diagnostics.rs  i18n.rs  icons.rs  lib.rs  migration_recovery.rs  modal_style.rs  motion.rs  nav.rs  payload_highlight.rs  plugins.rs  responsive.rs  scripts.rs  settings.rs  shell.rs  skeletons.rs  theme.rs  time_format.rs  toasts.rs  transfer_wizard.rs  transfer_wizard_rows.rs  widgets.rs  workbench.rs  workbench_connection_messages.rs  workbench_connection_messages_filters.rs  workbench_connection_messages_text.rs  workbench_detail.rs  workbench_dialogs.rs  workbench_header.rs  workbench_helpers.rs  workbench_layout.rs  workbench_messages.rs  workbench_publish.rs  workbench_subscribe.rs  workspace.rs
crates/correo-ui/src/migration_recovery/: actions.rs
crates/correo-ui/src/plugins/: diagnostics.rs  hooks.rs  installed.rs  keyboard.rs  marketplace.rs
crates/correo-ui/src/scripts/: dialogs.rs  footer.rs  layout.rs  log.rs
crates/correo-ui/tests/: about_workspace.rs  plugin_keyboard.rs  shell_screenshots.rs
crates/correo-ui/tests/support/: migration_recovery_scenarios.rs  screenshot_fallback.rs  screenshot_scenarios.rs  software_renderer.rs
plugins/correo-plugins-advanced-validator/: Cargo.toml  plugin.toml
plugins/correo-plugins-advanced-validator/src/: lib.rs
plugins/xml-format/: Cargo.toml  plugin.toml
plugins/xml-format/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs  package.rs  plugin_repository.rs
xtask/src/package/: checksums.rs  guard.rs  plugins.rs  tests.rs
xtask/src/plugin_repository/: tests.rs
(+62 files in other folders)
