[workspace]
members = [
    "crates/correo-app",
    "crates/correo-core",
    "crates/correo-diagnostics",
    "crates/correo-mqtt",
    "crates/correo-plugins",
    "crates/correo-scripting",
    "crates/correo-storage",
    "crates/correo-ui",
    "plugins/xml-format",
    "plugins/correo-plugins-contains-string-validator",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "GPL-3.0-or-later"
repository = "https://github.com/farion/correomqtt-rust"

[workspace.dependencies]
aes = "0.8"
aes-gcm = "0.10"
anyhow = "1"
arboard = "3"
async-trait = "0.1"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
color-eyre = "0.6"
directories = "6"
eframe = { version = "0.31", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence", "wayland", "x11"] }
egui = "0.31"
egui-phosphor = { version = "0.9", default-features = false, features = ["regular"] }
egui_extras = "0.31"
egui_kittest = { version = "0.31", features = ["snapshot", "wgpu"] }
flume = "0.11"
fluent-bundle = "0.16"
futures = "0.3"
image = "0.25"
keyring = "3"
pbkdf2 = "0.12"
rand = "0.8"
rquickjs = "0.8.1"
rfd = "0.15"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
schemars = { version = "0.8", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_with = "3"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unic-langid = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
wasmtime = "31"
zeroize = "1"
zip = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
