[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
correo-plugins = { path = "../crates/correo-plugins" }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zip.workspace = true

[lints]
workspace = true
