[package]
name = "correo-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "correomqtt"
path = "src/main.rs"

[dependencies]
correo-core = { path = "../correo-core" }
correo-diagnostics = { path = "../correo-diagnostics" }
correo-storage = { path = "../correo-storage" }
correo-ui = { path = "../correo-ui" }
directories.workspace = true
eframe.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
