[package]
name = "correo-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "correomqtt"
path = "src/main.rs"

[dependencies]
correo-core = { path = "../correo-core" }
correo-diagnostics = { path = "../correo-diagnostics" }
correo-plugins = { path = "../correo-plugins" }
correo-storage = { path = "../correo-storage" }
correo-ui = { path = "../correo-ui" }
directories.workspace = true
eframe.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
ureq.workspace = true
zip.workspace = true

[lints]
workspace = true
