[package]
name = "correo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
correo-diagnostics = { path = "../correo-diagnostics" }
correo-mqtt = { path = "../correo-mqtt" }
correo-storage = { path = "../correo-storage" }
flume.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true

[lints]
workspace = true
