[package]
name = "correo-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
