[package]
name = "correo-plugin-base64"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
toml.workspace = true

[lints.rust]
unsafe_code = "allow"
