[package]
name = "correo-plugin-zip-manipulator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints.rust]
unsafe_code = "allow"
