[package]
name = "correo-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
correo-plugin-xml-format = { path = "../../plugins/xml-format" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
wasmtime.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat = "1"

[lints]
workspace = true
