[package]
name = "correo-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
correo-plugins-advanced-validator = { path = "../../plugins/correo-plugins-advanced-validator" }
correo-plugins-json-format = { path = "../../plugins/correo-plugins-json-format" }
correo-plugins-systopic = { path = "../../plugins/correo-plugins-systopic" }
correo-plugins-xml-xsd-validator = { path = "../../plugins/correo-plugins-xml-xsd-validator" }
correo-plugin-xml-format = { path = "../../plugins/xml-format" }
correo-plugin-zip-manipulator = { path = "../correo-plugin-zip-manipulator" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
wasmtime.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat = "1"

[lints]
workspace = true
