[package]
name = "correo-scripting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
correo-mqtt = { path = "../correo-mqtt" }
rquickjs.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[lints]
workspace = true
