[package]
name = "correo-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
correo-core = { path = "../correo-core" }
correo-style = { path = "../correo-style", features = ["egui"] }
eframe.workspace = true
egui.workspace = true
egui-phosphor.workspace = true
egui_extras.workspace = true
fluent-bundle.workspace = true
rfd.workspace = true
time.workspace = true
unic-langid.workspace = true

[dev-dependencies]
egui_kittest.workspace = true
image.workspace = true

[lints]
workspace = true
